# static-pkm

./: .eslintrc.cjs  .gitignore  CLAUDE.md  LICENSE  ROLLUP-GUIDE.md  cache-scan.config.json  eslint.config.js  index-react.html  index.html  manifest.json  package-lock.json  package.json  postcss.config.cjs  postcss.config.js  rollup.config.css.js  rollup.config.js  service-worker.js  setup-dev.sh  setup-rollup.sh  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.pwa.ts  vite.config.ts
.github/workflows/: build-tree.yml  deploy.yml
Home/: calcE.js  nitricCalculator.js  notepad.js
Home/Test/: testcssonly.js  testevents.js  testisolation.js  testresources.js  testsecurity.js
Home/Tools/: calcA.js  calcB.js  calcC.js  calcD.js  calcE.js  nitricCalculator.js
css/: app.min.css  app.min.css.map  main.css  modules.css  styles.css
javascript/: app.js  app.min.js  app.min.js.map  cache-manifest.json  tree.json
public/: service-worker.js
scripts/: copy-pwa-assets.mjs  dev-server.mjs  download-vendor.sh  generate-cache-manifest.mjs  generate-css-entry.mjs  generate-tree.mjs  prod-server.mjs  test-dual-server.mjs  watch-and-build.mjs
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  lib.rs  main.rs  watcher.rs  write_tracker.rs
src-tauri/src/blockstore/: mod.rs  scanner.rs
src-tauri/src/commands/: blockstore.rs  fileops.rs  layout.rs  mod.rs  search.rs
src-tauri/src/db/: mod.rs
src-tauri/src/indexer/: mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/utils/: mod.rs
(+161 files in other folders)
